# ticketman

./: .gitignore  Makefile  README.md  pyproject.toml
config/: config.example.yaml
src/ticketman/: __init__.py  auth.py  board.py  browser.py  calibrate.py  captcha.py  checkout.py  cli.py  config.py  discovery.py  ics.py  models.py  monitor.py  notify.py  registry.py  strategy.py  watch.py
tests/: test_calibrate.py  test_cli.py  test_discovery.py  test_ics.py  test_registry.py  test_roster.py  test_strategy.py  test_watch.py
