[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticketman"
version = "0.2.0"
description = "Alerting and coordination to land retail concert tickets for your group"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "plyer>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pip-audit>=2.7",
    "bandit>=1.8",
]

[project.scripts]
ticketman = "ticketman.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ticketman"]

[tool.bandit]
exclude_dirs = ["tests"]
